--- a/blog/templates/blog/post_archive_day.html
+++ b/blog/templates/blog/post_archive_day.html
@@ -1,23 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>document</title>
-</head>
-<body>
-    <h1>Post Archives for {{ day|date:'N, d, Y' }}</h1>
-    <br/>     
-    <div>
-        <ul>
-            {% for post in object_list %}
-            <li>
-                {{ post.modify_dt|date:"Y-m-d" }}&nbsp;&nbsp;&nbsp;
-                <a href="{{ post.get_absolute_url }}"><strong>{{ post.title }}</strong></a>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
-</body>
-</html>
+
+{% extends "base.html" %}
+
+{% block title %}past_archive_day.html{% endblock  %}
+    
+
+{% block content %}
+<h1>Post Archives for {{ day|date:'N, d, Y' }}</h1>
+<br/>     
+<div>
+    <ul>
+        {% for post in object_list %}
+        <li>
+            {{ post.modify_dt|date:"Y-m-d" }}&nbsp;&nbsp;&nbsp;
+            <a href="{{ post.get_absolute_url }}"><strong>{{ post.title }}</strong></a>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+{% endblock  %}
+
+{% block footer %}
+<footer class="navbar navbar-dark fixed-bottom bg-secondary" style="height: 5%; justify-content: right; padding-right: 10px;"> 
+    <p style="color: white;">Blog Post,  Copyright &copy; 2022 DjangoBook by Iheehee</p>
+</footer>  
+{% endblock  %}
