--- a/blog/templates/blog/post_archive_month.html
+++ b/blog/templates/blog/post_archive_month.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Post Archives for {{ month|date:'N, y' }}</h1>
+
+{% extends "base.html" %}
+
+{% block title %}past_archive_day.html{% endblock  %}
+    
+
+{% block content %}
+<h1>Post Archives for {{ month|date:'N, y' }}</h1>
     <br/>     
     <div>
         <ul>
@@ -19,5 +17,10 @@
             {% endfor %}
         </ul>
     </div>
-</body>
-</html>
+{% endblock  %}
+
+{% block footer %}
+<footer class="navbar navbar-dark fixed-bottom bg-secondary" style="height: 5%; justify-content: right; padding-right: 10px;"> 
+    <p style="color: white;">Blog Post,  Copyright &copy; 2022 DjangoBook by Iheehee</p>
+</footer>  
+{% endblock  %}
