--- a/bookmarkapp/templates/bookmarkapp/bookmarkapp_detail.html
+++ b/bookmarkapp/templates/bookmarkapp/bookmarkapp_detail.html
@@ -1,20 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Django Bookmark List</title>
-</head>
-<body>
-    <div id="content">
+{% extends "base.html" %}
 
-        <h1>Bookmark List</h1>
+{% block title %}bookmarkapp_detail.html{% endblock  %}
+    
 
-        <ul>            
-            <li>URL: <a href="{{ object.url }}">{{ object.url }}</a></li>
-        </ul>
+{% block content %}
+<div id="content">
 
-    </div>
-</body>
-</html>
+    <h1>Bookmark List</h1>
+
+    <ul>            
+        <li>URL: <a href="{{ object.url }}">{{ object.url }}</a></li>
+    </ul>
+
+</div>
+{% endblock  %}
+
+{% block footer %}
+<footer class="navbar navbar-dark fixed-bottom bg-secondary" style="height: 5%; justify-content: right; padding-right: 10px;"> 
+    <p style="color: white;">{{ object }},  Copyright &copy; 2022 DjangoBook by Iheehee</p>
+</footer>  
+{% endblock  %}
