--- a/bookmarkapp/templates/bookmarkapp/bookmarkapp_list.html
+++ b/bookmarkapp/templates/bookmarkapp/bookmarkapp_list.html
@@ -1,24 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Django Bookmark List</title>
-</head>
-<body>
-    <div id="content">
 
-        <h1>Bookmark List</h1>
+{% extends "base.html" %}
 
-        <ul>
+{% block title %}bookmarkapp_List.html{% endblock  %}
+    
+
+{% block content %}
+<div id="content">
+
+    <h1>Bookmark List</h1>
+
+    <ul>
+        
+        {% for bookmark in object_list %}
+            <li><a href="{% url 'bookmarkapp:detail' bookmark.id %}">{{ bookmark }}</a></li>
+        {% endfor %}
             
-            {% for bookmark in object_list %}
-                <li><a href="{% url 'bookmarkapp:detail' bookmark.id %}">{{ bookmark }}</a></li>
-            {% endfor %}
-                
-        </ul>
+    </ul>
 
-    </div>
-</body>
-</html>
+</div>
+{% endblock  %}
+
+{% block footer %}
+<footer class="navbar navbar-dark fixed-bottom bg-secondary" style="height: 5%; justify-content: right; padding-right: 10px;"> 
+    <p style="color: white;">Bookmark list,  Copyright &copy; 2022 DjangoBook by Iheehee</p>
+</footer>  
+{% endblock  %}
