--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -29,9 +29,21 @@
 <div>
     {{ object.content|linebreaks }}
 </div>
+
+<br>
+<div>
+    <b>TAGS</b> <i class="fas fa-tag"></i>
+    {% load taggit_templatetags2_tags %}
+    {% get_tags_for_object object as "tags" %} 
+    {% for tag in tags %}
+    <a href="{% url 'blog:tagged_object_list' tag.name %}">{{tag.name}}</a>    
+    {% endfor %}
+    &emsp;
+    <a href="{% url 'blog:tag_cloud' %}"> <span class ="btn btn-info btn-sm">TagCloud</span></a>    
+</div>
 {% endblock  %}
 
-{% block footer %}
+{% block footer %}  
 <footer class="navbar navbar-dark fixed-bottom bg-secondary" style="height: 5%; justify-content: right; padding-right: 10px;"> 
     <p style="color: white;">Blog Post,  Copyright &copy; 2022 DjangoBook by Iheehee</p>
 </footer>  
