--- a/bookmarkapp/templates/bookmarkapp/bookmarkapp_detail.html
+++ b/bookmarkapp/templates/bookmarkapp/bookmarkapp_detail.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div id="content">
 
-    <h1>Bookmark List</h1>
+    <h1>{{ object.title }} </h1>
 
     <ul>            
         <li>URL: <a href="{{ object.url }}">{{ object.url }}</a></li>
