--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="">Admin</a></li>
                 <li><a class="dropdown-item" href="{% url 'blog:post_archive' %}">Archive</a></li>
-                <li><a class="dropdown-item" href="#">Search</a></li>
+                <li><a class="dropdown-item" href="{% url 'blog:search' %}">Search</a></li>
               </ul>
             </li>
           </ul>
@@ -57,7 +57,7 @@
 {% endblock  %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        
+<script src="https://kit.fontawesome.com/be9b173794.js" crossorigin="anonymous"></script>
 </body>
 
 
