--- a/templates/home.html
+++ b/templates/home.html
@@ -13,8 +13,6 @@
     display: block;
     justify-content: space-between;
   
-   
-
 }    
 .home-image {
     background-image: url("{% static 'img/space.jpeg' %}");
@@ -70,7 +68,7 @@
 
 
 {% block footer %}
-<footer class="navbar navbar-dark fixed-bottom bg-secondary" style="height: 5%; justify-content: right; padding-right: 10px;">  
+<footer class="navbar navbar-dark fixed-bottom bg-secondary" style="position:relative; height: 5%; justify-content: right; padding-right: 10px;">  
     <p style="color: white;">HomeView,  Copyright &copy; 2022 DjangoBook by Iheehee</p></p>
 </footer>    
 {% endblock  %}
