--- a/blog/templates/blog/post_search.html
+++ b/blog/templates/blog/post_search.html
@@ -8,22 +8,24 @@
 <h1>Blog Search</h1>
 <br>
 
-<form action="." method="post"></form>
+<form action="." method="post"> {% csrf_token %} 
+    {{ form.as_table }}
+    <input type="submit" value="Submit" class="btn btn-primary btn-sm">
+</form>
 
-<div>
-    <span>
-        {% if page_obj.has_previous %}
-            <a href="?page={{ page_obj.previous_page_number }}">PreviousPage</a>               
-        {% endif %}
-        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pagees }} 
-                    
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">NextPage</a>
-            
-        {% endif %}
-                          
-    </span>
-</div>
+<br/><br/>
+
+
+{% if object_list %}
+{% for post in object_list %}
+    <h2><a href='{{ post.get_absolute_url }}'>{{ post.title }}</a> </h2>
+    {{ post.modify_date|date:"N d, Y" }}
+    <p>{{ post.descroption }}</p>
+{% endfor %} 
+
+{% elif search_term %}
+    <b><i>Search Word({{ search_term }}) Not Found !</i></b>
+{% endif %}
 {% endblock  %}
 
 {% block footer %}
