--- a/blog/templates/blog/post_search.html
+++ b/blog/templates/blog/post_search.html
@@ -19,7 +19,7 @@
 {% if object_list %}
 {% for post in object_list %}
     <h2><a href='{{ post.get_absolute_url }}'>{{ post.title }}</a> </h2>
-    {{ post.modify_date|date:"N d, Y" }}
+    {{ post.modify_dt|date:"N d, Y" }}
     <p>{{ post.descroption }}</p>
 {% endfor %} 
 
