--- a/photo/templates/photo/album_detail.html
+++ b/photo/templates/photo/album_detail.html
@@ -18,11 +18,23 @@
     
     <hr style="margin: 0 0 20px 0;">
 
-    <div class="row">
-
-    </div>
+<div class="row"></div>
+        
 {% for photo in object.photo_set.all %}    
+<div class="col-md-3 mb-5">
+    <div class="thumnail"> 
+        <a href="{{ photo.get_absolute_url }}">
+            <img src= "{{ photo.image.thumb_url }}" style="width: 100%;">
+        </a>
+    </div>
+    <ul>
+        <li class="font-italic">{{ photo.title }}</li>
+        <li class="font-italic">{{ photo.upload_dt|date:"Y-m-d" }}</li>
+    </ul>
+</div>
 {% endfor %}
+
+
 
 
 {% endblock  %}
