--- a/photo/templates/photo/album_list.html
+++ b/photo/templates/photo/album_list.html
@@ -4,14 +4,15 @@
     
 {% block extra-style %} 
 <style>
-    thumbnail {
+    .thumbnail {
         border: 3px solid #ccc;
     }
 </style>
+{% endblock %}
 
 {% block content %}
 
-    {% for item in object_list %}
+{% for item in object_list %}
     <div class="mt-5">
         <a class="h2" href="{% url 'photo:album_detail' item.id %}">
             {{ item.name }}
@@ -21,17 +22,23 @@
 
     <hr style="margin: 0 0 20px 0;">
 
-    <div class="row">
+    <div class="row d-flex">
+
         {% for photo in item.photo_set.all|slice:":5" %}
-        <div class = "ml-5">
-            <div class="thumbnail">
-                <a href="{{ photo.get_absolute_rul }}">
-                    <img src="{{ photo.image.thumb_url }}" style="width: 100%;">
-                </a>
+        <div class ="col-md-2 mb-5">
+            <div class = "ml-5">
+                <div class="" style="width: 100%;">
+                    <a href="{{ photo.get_absolute_rul }}">
+                        <img src="{{ photo.image.thumb_url }}" class="thumbnail">
+                    </a>
+                </div>
             </div>
         </div>
+        {% endfor %}
     </div>
+        
 {% endfor %}
 
+{% endblock %}
+    
 
-{% endblock  %}
