--- a/photo/templates/photo/album_detail.html
+++ b/photo/templates/photo/album_detail.html
@@ -4,11 +4,11 @@
     
 {% block extra-style %} 
 <style>
-    thumbnail {
-        border: 5px solid #ccc;
+    .thumbnail {
+        border: 3px solid #ccc;
     }
 </style>
-
+{% endblock %}
 {% block content %}
 
     <div class="mt-5">
@@ -18,23 +18,23 @@
     
     <hr style="margin: 0 0 20px 0;">
 
-<div class="row"></div>
+<div class="row d-flex">
         
-{% for photo in object.photo_set.all %}    
-<div class="col-md-3 mb-5">
-    <div class="thumnail"> 
-        <a href="{{ photo.get_absolute_url }}">
-            <img src= "{{ photo.image.thumb_url }}" style="width: 100%;">
-        </a>
+    {% for photo in object.photo_set.all %}    
+    <div class="col-md-2 mb-5">
+        <div class=""> 
+            <a href="{{ photo.get_absolute_url }}">
+                <img src= "{{ photo.image.thumb_url }}"  class="thumbnail">
+            </a>
+        </div>
+        <ul>
+            <li class="font-italic">{{ photo.title }}</li>
+            <li class="font-italic">{{ photo.upload_dt|date:"Y-m-d" }}</li>
+        </ul>
     </div>
-    <ul>
-        <li class="font-italic">{{ photo.title }}</li>
-        <li class="font-italic">{{ photo.upload_dt|date:"Y-m-d" }}</li>
-    </ul>
+    {% endfor %}
+
 </div>
-{% endfor %}
-
-
 
 
 {% endblock  %}
