--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'photo:index' %}">Photo</a>
+            </li>  
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Until
@@ -45,6 +46,18 @@
                 <li><a class="dropdown-item" href="{% url 'blog:search' %}">Search</a></li>
               </ul>
             </li>
+            <ul class="navbar-nav ml-5 mr-5">
+              <li class="nav-item dropdown mx-1 btn btn-primary">
+                {% if user.is_active %}
+                <a class="nav-link dropdown-toggle text-white" href="#" data-toggle="dropdown">
+                  <i class="fas fa-user"></i>&ensp;Anonymous&ensp;</a>
+                <div class="dorpdown-menu">
+                  <a class="dropdown-item" href="{% url 'login' %}">Login</a>
+                  <a class="dropdown-item" href="{% url 'register' %}">Register</a>
+                </div>
+                 {% endif %}  
+              </li>
+            </ul>  
           </ul>
         </div>
       </div>
