--- a/templates/base.html
+++ b/templates/base.html
@@ -49,13 +49,21 @@
             <ul class="navbar-nav ml-5 mr-5">
               <li class="nav-item dropdown mx-1 btn btn-primary">
                 {% if user.is_active %}
-                <a class="nav-link dropdown-toggle text-white" href="#" data-toggle="dropdown">
+                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="fas fa-user"></i>&ensp;{% firstof user.get_short_name user.get_username %}&ensp;</a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                      <li><a class="dropdown-item" href="{% url 'password_change' %}">password_change</a></li>
+                    </ul>
+                {% else %}
+                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <i class="fas fa-user"></i>&ensp;Anonymous&ensp;</a>
-                <div class="dorpdown-menu">
-                  <a class="dropdown-item" href="{% url 'login' %}">Login</a>
-                  <a class="dropdown-item" href="{% url 'register' %}">Register</a>
-                </div>
-                 {% endif %}  
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
+                      <li><a class="dropdown-item" href="{% url 'register' %}">Register</a></li>
+                    </ul>
+        
+                {% endif %}  
               </li>
             </ul>  
           </ul>
