--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,18 @@
                 <li><a class="dropdown-item" href="{% url 'blog:search' %}">Search</a></li>
               </ul>
             </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Change
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="{% url 'bookmarkapp:change' %}">Bookmark</a></li>
+                <li><a class="dropdown-item" href="{% url 'blog:add' %}">Post</a></li>
+                <div class="dropdown-divider"></div>
+                <li><a class="dropdown-item" href="">Album</a></li>
+                <li><a class="dropdown-item" href="">Photo</a></li>
+              </ul>
+            </li>
             <ul class="navbar-nav ml-5 mr-5">
               <li class="nav-item dropdown mx-1 btn btn-primary">
                 {% if user.is_active %}
