--- a/blog/templates/blog/post_change_list.html
+++ b/blog/templates/blog/post_change_list.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}bookmarkapp_change_list.html{% endblock  %}
+{% block title %}post_change_list.html{% endblock  %}
     
 
 {% block content %}
 
-<h1>Bookmark Change - {{user}}</h1>
+<h1>Post Change - {{user}}</h1>
 <br>
 
 <table class="table table-bordered table-condensed table-striped">
@@ -13,7 +13,7 @@
     <thead>
         <tr class="table-primary">
             <th>Title</th>
-            <th>Url</th>
+            <th>Description</th>
             <th>Owner</th>
             <th>Update</th>
             <th>Delete</th>
@@ -21,16 +21,17 @@
     </thead>
 
     <tbody>
-        {% for item in object_list %} 
+        
+        {% for item in object_list %}
         <tr>
             <td>{{ item.title }}</td>
-            <td>{{ item.url }}</td>
+            <td>{{ item.description }}</td>
             <td>{{ item.owner }}</td>
-            <td><a href="{% url 'bookmark:update' item.id %}">Update</a></td>
-            <td><a href="{% url 'bookmark:delete' item.id %}">Delete</a></td>
-        </tr>
+            <td><a href="{% url 'blog:update' item.id %}">Update</a></td>
+            <td><a href="{% url 'blog:delete' item.id %}">Delete</a></td>
+        </tr>    
         {% endfor %}
+        
     </tbody>
-    
 </table>
 {% endblock  %}
