--- a/bookmarkapp/templates/bookmarkapp/bookmarkapp_form.html
+++ b/bookmarkapp/templates/bookmarkapp/bookmarkapp_form.html
@@ -26,7 +26,7 @@
         <div class="form-group row">
             {{ form.url|add_label_class:"col-form-label col-sm-2 ml-3 font-weight-bold" }}
             <div class="col-sm-5">
-                {{ form.password|add_class:"form-control" }}
+                {{ form.url|add_class:"form-control" }}
             </div>
         </div>
         
