--- a/photo/templates/photo/photo_change_list.html
+++ b/photo/templates/photo/photo_change_list.html
@@ -5,13 +5,13 @@
 
 {% block content %}
 
-<h1>Bookmark Change - {{user}}</h1>
+<h1>Photo Change - {{user}}</h1>
 <br>
 
-<table class="table table-bordered table-condensed table-striped">
+<table class="table table-striped table-bordered table-condensed">
 
     <thead>
-        <tr class="table-primary">
+        <tr class="table-info">
             <th>Title</th>
             <th>Url</th>
             <th>Owner</th>
@@ -23,11 +23,11 @@
     <tbody>
         {% for item in object_list %} 
         <tr>
+            <td>{{ item.album }}</td>
             <td>{{ item.title }}</td>
-            <td>{{ item.url }}</td>
             <td>{{ item.owner }}</td>
-            <td><a href="{% url 'bookmark:update' item.id %}">Update</a></td>
-            <td><a href="{% url 'bookmark:delete' item.id %}">Delete</a></td>
+            <td><a href="{% url 'photo:photo_update' item.id %}">Update</a></td>
+            <td><a href="{% url 'photo:photo_delete' item.id %}">Delete</a></td>
         </tr>
         {% endfor %}
     </tbody>
